--- a/resources/css/avatar.css
+++ b/resources/css/avatar.css
@@ -30,3 +30,16 @@
     width: 100%;
     object-fit: cover;
 }
+.datos-image{
+    display: flex;
+    align-items: center;
+}
+
+
+
+.profile-avatar img {
+    border-radius: 50%;
+    border: solid 2px white;
+    height: 100px;
+    width: 150px;
+}
