--- a/resources/css/welcome.css
+++ b/resources/css/welcome.css
@@ -15,6 +15,8 @@ body {
 .top-right{
     color: #9aa5b0;
     text-decoration: none;
+    display: flex;
+    
 }
 a{
     color: #d5d7d9;
@@ -24,7 +26,8 @@ a{
 }
 
 hr{
-    color: #9aa5b0
+    color: #9aa5b0;
+    margin-top: 2em;
     
 }
 section{
@@ -57,18 +60,26 @@ h1{
     width: 100%;
     height: 100%;
     background-color: #1f2937;
+    padding-bottom: 3em;
 
   
 }
 
 .content {
     z-index: 1;
+    margin-top: 2.5em;
+
 }
 
 .top-right {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 5px;
+    right: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    z-index: 2;
+    
 }
 
 .grid {
@@ -178,6 +189,9 @@ h1{
     padding: 5px;
     margin-bottom: 10px;
 }
+.tiempo{
+    display: none;
+}
 
 /* Media query para ajustar el número de columnas en pantallas pequeñas */
 @media screen and (max-width: 768px) {
@@ -189,5 +203,12 @@ h1{
     }
     section{
         width: 100%;
+    }
+    .weather{
+        display: none;
+    
+    }
+    .tiempo{
+        display: block;
     }
 }
